--- a/index.html
+++ b/index.html
@@ -629,13 +629,7 @@
                                 <p>GitHub: <a href="https://github.com/GranOla18" target="_blank">GranOla18</a></p>
                                 <p>LinkedIn: <a href="https://www.linkedin.com/in/alexandra-xin-p%C3%A9rez-zhou-3584b8220/" target="_blank">LinkedIn</a></p>
                             </div>
-                            <div class="col-lg-1 col-md-12 col-12 p-4"></div>
-
-                            <div class="col-lg-5 col-md-6 col-sm-12 col-12 my-auto text-center">
-                                <div class="iframe-container-idx align-self-center">
-                                    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3763.9127540869517!2d-99.1861020846004!3d19.372930047604953!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x85d1ff85fc8e2081%3A0x140608c32a3ca036!2sUNIVERSIDAD%20PANAMERICANA!5e0!3m2!1ses!2smx!4v1631731209995!5m2!1ses!2smx" width="700" height="425" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
-                                </div>
-                            </div>
+                            <div class="col-lg-6"></div>
                         </div>
                     </div>
                     
@@ -646,7 +640,7 @@
                       <div class="col-11" id="separation">
                       </div>
                     </div>
-                  </div>
+                </div>
 
             </main>
 
